[package]
name = "windows-wfp"
version = "0.2.0"
authors = ["Pierre <lostyzen@github.com>"]
edition = "2021"
rust-version = "1.75"
license = "GPL-2.0"
description = "Safe Rust wrapper for the Windows Filtering Platform (WFP) kernel-level firewall API"
repository = "https://github.com/lostyzen/windows-wfp"
documentation = "https://docs.rs/windows-wfp"
readme = "README.md"
keywords = ["windows", "firewall", "wfp", "network", "filter"]
categories = ["os::windows-apis", "network-programming"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Security",
    "Win32_System_Rpc",
    "Win32_System_Threading",
] }
thiserror = "2.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
