[package]
name = "windows-wfp"
version = "0.2.1"
authors = ["Pierre <lostyzen@github.com>", "Mullvad VPN"]
edition = "2024"
rust-version = "1.95"
license = "GPL-2.0"
description = "Safe Rust wrapper for the Windows Filtering Platform (WFP) kernel-level firewall API"
repository = "https://github.com/lostyzen/windows-wfp"
documentation = "https://docs.rs/windows-wfp"
readme = "README.md"
keywords = ["filter", "firewall", "network", "wfp", "windows"]
categories = ["network-programming", "os::windows-apis"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
thiserror = "2.0"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_WindowsFilteringPlatform",
  "Win32_Security",
  "Win32_System_Rpc",
  "Win32_System_Threading",
] }
